# rsmobiledevice

./: Cargo.toml  README.md
src/: device.rs  device_domains.rs  device_info.rs  device_installer.rs  device_syslog.rs  devices.rs  devices_collection.rs  errors.rs  ideviceinfo.rs  lib.rs
src/device_afcclient/: errors.rs  mod.rs
src/device_afcclient/models/: afc_open_options.rs  device_file.rs  fstree.rs  mod.rs  pathinfo.rs
src/device_diagnostic/: enums.rs  errors.rs  mod.rs
src/device_info/: domains.rs  errors.rs  keys.rs  mod.rs
src/device_installer/: errors.rs  mod.rs
src/device_syslog/: constants.rs  errors.rs  filters.rs  logs_data.rs  mod.rs
