[package]
name = "rsmobiledevice"
version = "0.1.0"
edition = "2021"
authors = ["Abdullah Al-Banna"]
description = "A high-level, user-friendly wrapper for rusty_libimobiledevice, simplifying interaction with iOS devices in Rust."
homepage = "https://github.com/Abdullah-Albanna/rsmobiledevice"
repository = "https://github.com/Abdullah-Albanna/rsmobiledevice"
keywords = ["libimobiledevice", "ios", "lockdown", "ipa", "ipcc", "mobiledevice"]

[dependencies]
lazy_static = "1.5.0"
plist_plus = "0.2.6"
regex = "1.11.1"
rusty_libimobiledevice = "0.2.2"
thiserror = "2.0.3"
zip = "2.2.1"
