[package]
name = "rsmobiledevice"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Abdullah Albanna <abdu.albanna@proton.me>"]
description = "A high-level, user-friendly wrapper for rusty_libimobiledevice, simplifying interaction with iOS devices in Rust."
homepage = "https://github.com/abdullah-albanna/rsmobiledevice"
repository = "https://github.com/abdullah-albanna/rsmobiledevice"
documentation = "https://docs.rs/rsmobiledevice"
readme = "README.md"
keywords = ["libimobiledevice", "ios", "lockdown", "ipa", "ipcc", "mobiledevice"]

[lib]
name = "rsmobiledevice"

[dependencies]
chrono = "0.4.41"
crossbeam-channel = "0.5"
plist_plus = "0.2.6"
regex = "1"
rusty_libimobiledevice = { git = "https://github.com/Abdullah-Albanna/modified_rusty_libimobiledevice", rev = "eb73d54d" }
thiserror = "2"
zip = "2"
